; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_uart.c_uart_pattern_pop_pos.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_uart.c_uart_pattern_pop_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, i64, i32* }

@p_uart_obj = common dso_local global %struct.TYPE_5__** null, align 8
@.str = private unnamed_addr constant [18 x i8] c"uart driver error\00", align 1
@uart_spinlock = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uart_pattern_pop_pos(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load %struct.TYPE_5__**, %struct.TYPE_5__*** @p_uart_obj, align 8
  %6 = load i64, i64* %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__*, %struct.TYPE_5__** %5, i64 %6
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = call i32 @UART_CHECK(%struct.TYPE_5__* %8, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 -1)
  %10 = load i32*, i32** @uart_spinlock, align 8
  %11 = load i64, i64* %2, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = call i32 @UART_ENTER_CRITICAL(i32* %12)
  %14 = load %struct.TYPE_5__**, %struct.TYPE_5__*** @p_uart_obj, align 8
  %15 = load i64, i64* %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__*, %struct.TYPE_5__** %14, i64 %15
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %3, align 8
  store i32 -1, i32* %4, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = icmp ne %struct.TYPE_4__* %19, null
  br i1 %20, label %21, label %40

21:                                               ; preds = %1
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %24, %27
  br i1 %28, label %29, label %40

29:                                               ; preds = %21
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 2
  %32 = load i32*, i32** %31, align 8
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = getelementptr inbounds i32, i32* %32, i64 %35
  %37 = load i32, i32* %36, align 4
  store i32 %37, i32* %4, align 4
  %38 = load i64, i64* %2, align 8
  %39 = call i32 @uart_pattern_dequeue(i64 %38)
  br label %40

40:                                               ; preds = %29, %21, %1
  %41 = load i32*, i32** @uart_spinlock, align 8
  %42 = load i64, i64* %2, align 8
  %43 = getelementptr inbounds i32, i32* %41, i64 %42
  %44 = call i32 @UART_EXIT_CRITICAL(i32* %43)
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @UART_CHECK(%struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @UART_ENTER_CRITICAL(i32*) #1

declare dso_local i32 @uart_pattern_dequeue(i64) #1

declare dso_local i32 @UART_EXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
